--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,15 +2,15 @@
     width: 100%;
     min-height: 40px;
     display: flex;
-    justify-content: end;
+    justify-content: center;
+    padding: 1em;
     position: fixed;
-    border-bottom: 1px solid #fff;
 }
 
 .navbarUl{
     padding: 0 1em;
     display: inline-flex;
-    gap: 1em;
+    gap: 1.5em;
 }
 
 .navbarLi{
@@ -22,4 +22,10 @@
     color: #fff;
     text-decoration: none;
     font-size: 1.1em;
+}
+
+@media screen and (min-width:1024px) {
+    .navbar{
+        justify-content: end;
+    }
 }
