--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@500&family=Roboto&display=swap');
+
 body{
     padding: 0;
     margin: 0;
+    font-family: 'Roboto', serif;
+    background: #070707;
 }
 
 section{
     height: 100vh;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
