--- a/src/sections/Home/Home.module.css
+++ b/src/sections/Home/Home.module.css
@@ -8,5 +8,5 @@
 }
 
 span{
-    color: rgb(168 85 247 / var(--tw-text-opacity)) !important;
+    color: rgb(147 51 234 / var(--tw-text-opacity));
 }
