--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@500&family=Roboto&display=swap');
 
+html {
+    scroll-behavior: smooth !important;
+}
+
 body{
     padding: 0;
     margin: 0;
@@ -17,4 +21,18 @@ section{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+
+body::-webkit-scrollbar {
+    width: 6px;               /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+    background: transparent;        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #474747;    /* color of the scroll thumb */
+    border-radius: 0;       /* roundness of the scroll thumb */
 }
