--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,14 @@ body{
     padding: 0;
     margin: 0;
     font-family: 'Roboto', serif;
-    background: #070707;
+    background: #101010;
 }
 
 section{
     height: 100vh;
     display: flex;
     align-items: center;
+    padding-top: 60px;
     justify-content: center;
 }
 
