--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,5 +1,6 @@
 .navbar{
     width: 100%;
+    background: linear-gradient(60deg, #000, #1d0d0d, #000, #1d0d0d);
     min-height: 40px;
     display: flex;
     max-height: 60px;
@@ -34,6 +35,7 @@
 
 @media screen and (min-width:1024px) {
     .navbar{
+        background: transparent;
         justify-content: end;
     }
 }
